src/components/block-resizer/editor.scss
body.maxi-blocks--active .maxi-block__resizer {
	.maxi-resizable {
		&__handle {
			display: none;
			width: 15px;
			height: 15px;
			z-index: 20;
			&--show {
				display: block;
			}
			&:before {
				content: '';
				display: block;
				cursor: inherit;
				position: absolute;
				border-top: 10px solid transparent;
				border-right: 10px solid transparent;
				border-bottom: 10px solid transparent;
				border-left: 10px solid transparent;
			}
			&-top {
				top: 0 !important;
				&:before {
					top: -10px;
					left: 0px;
					border-bottom: 1px solid var(--maxi-primary-color);
				}
			}
			&-right {
				right: 0 !important;
				&:before {
					top: 0;
					right: -10px !important;
					border-left: 1px solid var(--maxi-primary-color);
				}
			}
			&-bottom {
				bottom: 0 !important;
				&:before {
					bottom: -10px;
					left: 0px;
					border-top: 1px solid var(--maxi-primary-color);
				}
			}
			&-left {
				left: 0 !important;
				&:before {
					top: 0;
					left: -10px;
					border-right: 1px solid var(--maxi-primary-color);
				}
			}
			&-topleft {
				left: 0 !important;
				&:before {
					left: 0;
					border-top: 10px solid var(--maxi-primary-color);
					top: 5px;
					border-left: 10px solid var(--maxi-primary-color);
				}
			}
			&-topright {
				right: 0 !important;
				&:before {
					right: 0;
					border-top: 10px solid var(--maxi-primary-color);
					top: 5px;
					border-right: 10px solid var(--maxi-primary-color);
				}
			}
			&-bottomleft {
				left: 0 !important;
				&:before {
					left: 0;
					border-bottom: 10px solid var(--maxi-primary-color);
					bottom: 5px;
					border-left: 10px solid var(--maxi-primary-color);
				}
			}
			&-bottomright {
				right: 0 !important;
				&:before {
					right: 0;
					border-bottom: 10px solid var(--maxi-primary-color);
					bottom: 5px;
					border-right: 10px solid var(--maxi-primary-color);
				}
			}
		}
		&__side-handle {
			&.maxi-resizable__handle-top,
			&.maxi-resizable__handle-bottom {
				width: 100%;
				&:active,
				&:hover {
					&:before {
						opacity: 1 !important;
					}
				}
				&:before {
					width: 100%;
					opacity: 0;
				}
			}
			&.maxi-resizable__handle-left,
			&.maxi-resizable__handle-right {
				height: 100%;
				&:active,
				&:hover {
					&:before {
						opacity: 1 !important;
					}
				}
				&:before {
					height: 100%;
					opacity: 0;
				}
			}
		}
	}
}

@keyframes horiz-line-motion {
	0% {
		opacity: 0;
		width: 0;
	}
	100% {
		opacity: 1;
		width: 100%;
	}
}

@keyframes vert-line-motion {
	0% {
		opacity: 0;
		height: 0;
	}
	100% {
		opacity: 1;
		height: 100%;
	}
}

